--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Interactive rating component</title>
 
@@ -53,7 +56,7 @@
     </div>
 
     <div class="submit">
-      Submit
+      SUBMIT
     </div>
   </div>
   <!-- Rating state end -->
