finish start component

--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,16 @@
     </div>
 
     <div class="numbers">
-      <div class="one">1</div>
-      <div class="two">2</div>
-      <div class="three">3</div>
-      <div class="four">4</div>
-      <div class="five">5</div>
+      <a class="one" href="">1</a>
+      <a class="two" href="">2</a>
+      <a class="three" href="">3</a>
+      <a class="four" href="">4</a>
+      <a class="five" href="">5</a>
     </div>
 
-    <div class="submit">
+    <a class="submit" href="">
       SUBMIT
-    </div>
+    </a>
   </div>
   <!-- Rating state end -->
 
