--- a/src/index.html
+++ b/src/index.html
@@ -103,12 +103,14 @@
     </div>
 
     <div class="selected">
-      You selected <!-- Add rating here --> out of 5
+      You selected <!-- Add rating here -->0 out of 5
+    </div>
+
+    <div class="thank-you">
+      Thank you!
     </div>
 
     <div class="thank-you-message">
-      Thank you!
-
       We appreciate you taking the time to give a rating. If you ever need more support,
       don’t hesitate to get in touch!
     </div>
