--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,14 @@
     </div>
 
     <div class="numbers">
-      <a class="one" href="">1</a>
-      <a class="two" href="">2</a>
-      <a class="three" href="">3</a>
-      <a class="four" href="">4</a>
-      <a class="five" href="">5</a>
+      <a id="one" href="" onclick="rate(1)">1</a>
+      <a id="two" href="" onclick="rate(2)">2</a>
+      <a id="three" href="" onclick="rate(3)">3</a>
+      <a id="four" href="" onclick="rate(4)">4</a>
+      <a id="five" href="" onclick="rate(5)">5</a>
     </div>
 
-    <a class="submit" href="">
+    <a class="submit" href="" onclik="submitAns()">
       SUBMIT
     </a>
   </div>
@@ -103,7 +103,7 @@
     </div>
 
     <div class="selected">
-      You selected <!-- Add rating here -->0 out of 5
+      You selected <span id="rating"></span> out of 5
     </div>
 
     <div class="thank-you">
@@ -122,7 +122,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
-
+  <script src="main.js"></script>
 </body>
 
 </html>
